# etlalchemy

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pre-commit.yml
etlalchemy/: ETLAlchemySource.py  ETLAlchemyTarget.py  etlalchemy_exceptions.py  literal_value_generator.py  schema_transformer.py
