[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.black]
line-length = 100
target_version = ["py310"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, B001, W503, ANN002, ANN003, ANN101, ANN102, D100, D101, R504"
per-file-ignores = "tests/test_*:D, ANN2, */__init__.py:D104"
exclude = ".git, __pycache__, .mypy_cache, .pytest_cache, .venv, .cache"
docstring-convention = "google"
mypy-init-return = "true"
count = "true"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"

[tool.mypy]
python_version = 3.10
cache_dir = "/dev/null"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
local_partial_types = true

[tool.poetry]
name = "etlalchemy2"
version = "2.0.0"
description = "extract, transform and load... migrate any SQL Database in 4 lines of code."
authors = ["quassy", "Sean Harrington"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
SQLAlchemy = "^1.4.36"
sqlalchemy-migrate = "^0.13.0"
SQLAlchemy-Utils = "^0.38.2"
cx-Oracle = { version = "^8.3.0", optional = true }
psycopg2-binary = { version = "^2.9.3", optional = true }
mysqlclient = { version = "^2.1.0", optional = true }
pyodbc = { version = "^4.0.32", optional = true }
sqlalchemy-firebird = { version = "^0.7.5", optional = true }

[tool.poetry.dev-dependencies]

# These are the python libraries for all SQL drivers.
# You must have the drivers installed in order to install these!
# (They are optional for a reason, install them them once drivers are installed)
[tool.poetry.extras]
oracle = ["cx-Oracle"]
mysql = ["mysqlclient"]
postgre = ["psycopg2-binary"]
odbc = ["pyodbc"]
firebird = ["sqlalchemy-firebird"]
